added css for header and body

--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,8 @@
       </div>
   </header>
     <!-- Page-specific (main) content here -->
-    <main class="container"></main>
+    <main class="container">
+    <p>What's on your mind?</p>
+</main>
   </body>
 </html>
