--- a/public/index.html
+++ b/public/index.html
@@ -27,8 +27,9 @@
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
+    <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
+  
   </head>
-
   <body>
     <!-- Top nav bar -->
     <nav>
