--- a/public/index.html
+++ b/public/index.html
@@ -40,13 +40,13 @@
     </div>
     </nav>
 
-    <header>
+    <header class="header">
       <div class="avatar">
           <img src="/images/profile-hex.png"> 
       </div>
       <br>
       <div class="avatar-name">
-          <p style="font-size: 45px;"><strong>Ethan &nbsp;</strong>Wong</p>
+          <p style="font-size: 45px;"><strong>Ethan &nbsp;Wong</strong></p>
       </div>
   </header>
     <!-- Page-specific (main) content here -->
