added responsive design

--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
         <i class="fas fa-angle-double-down"></i>
     </div>
     </nav>
-
+    <div class="split">
     <header class="header">
       <div class="avatar">
           <img src="/images/profile-hex.png"> 
@@ -68,8 +68,8 @@
           </div>
         </form>
       </section>
-      <section id="tweets-container">
-      </section>
-</main>
-  </body>
+      <section id="tweets-container"></section>
+    </main>
+  </div>
+</body>
 </html>
